trunk/Archive2/d8/088fc9799ad5f0/output
main.cpp:13:3: warning: missing terminating '"' character [-Winvalid-pp-token]
R("{
  ^
main.cpp:13:3: error: expected expression
main.cpp:25:2: warning: missing terminating '"' character [-Winvalid-pp-token]
}");
 ^
main.cpp:41:2: error: expected ';' after top level declarator
}
 ^
 ;
2 warnings and 2 errors generated.
